# simpleRenderer

./: CMakeLists.txt  README.md
abaondon/: OrthographicCamera.cpp  OrthographicCamera.h
src/: Perlin.h  main.cpp  main.hpp
src/Accelerator/: AABB.h  AARECT.h  BVH.h  Box.h
src/Core/: Camera.h  Color.hpp  Hittable.h  HittableList.h  Light.hpp  Material.h  ONB.h  PDF.h  Rasterizer_Texture.hpp  Rasterizer_Triangle.hpp  Shader.hpp  Texture.h  stb_image.cpp
src/Light/: AreaLight.hpp
src/Material/: Dielectric.hpp  Diffuse.hpp  Isotropic.hpp  Lambertian.hpp  Metal.hpp
src/Math/: Defs.h  FrameBuffer.hpp  Matrix.cpp  Matrix.h  Random.h  Ray.h  Vec.h  Vertex.h
src/Model/: Constant_Medium.h  MovingSphere.h  Plane.h  Sphere.h  Triangle.hpp
src/Renderer/: PathTracing.hpp  Rasterization.cpp  Rasterization.hpp  RayTracing.hpp
src/Shader/: Blinn_Shader.hpp  Bump_Shader.hpp  Displacement_Shader.hpp  Normal_Shader.hpp  Texture_Shader.hpp
src/Texture/: Checker_Texture.hpp  Image_Texture.hpp  Noise_Texture.hpp  Solid_Color.hpp
src/World/: World.h
